--- a/labeling/aggregate_xlm_to_csv.ipynb
+++ b/labeling/aggregate_xlm_to_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_path = glob('./images/*.xml')"
+    "files_path = glob('./annotations/*.xml')"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,43 +125,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>./images/N107.xml</td>\n",
-       "      <td>207</td>\n",
-       "      <td>356</td>\n",
-       "      <td>174</td>\n",
-       "      <td>287</td>\n",
+       "      <td>./annotations/Cars213.xml</td>\n",
+       "      <td>150</td>\n",
+       "      <td>233</td>\n",
+       "      <td>160</td>\n",
+       "      <td>194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>./images/N113.xml</td>\n",
-       "      <td>39</td>\n",
-       "      <td>108</td>\n",
-       "      <td>129</td>\n",
-       "      <td>157</td>\n",
+       "      <td>./annotations/Cars207.xml</td>\n",
+       "      <td>254</td>\n",
+       "      <td>372</td>\n",
+       "      <td>229</td>\n",
+       "      <td>264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>./images/N62.xml</td>\n",
-       "      <td>289</td>\n",
-       "      <td>421</td>\n",
-       "      <td>188</td>\n",
-       "      <td>232</td>\n",
+       "      <td>./annotations/Cars398.xml</td>\n",
+       "      <td>72</td>\n",
+       "      <td>196</td>\n",
+       "      <td>139</td>\n",
+       "      <td>222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>./images/N89.xml</td>\n",
-       "      <td>150</td>\n",
-       "      <td>378</td>\n",
-       "      <td>217</td>\n",
-       "      <td>269</td>\n",
+       "      <td>./annotations/Cars367.xml</td>\n",
+       "      <td>224</td>\n",
+       "      <td>382</td>\n",
+       "      <td>161</td>\n",
+       "      <td>222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>./images/N88.xml</td>\n",
-       "      <td>208</td>\n",
-       "      <td>370</td>\n",
-       "      <td>89</td>\n",
-       "      <td>173</td>\n",
+       "      <td>./annotations/Cars401.xml</td>\n",
+       "      <td>158</td>\n",
+       "      <td>238</td>\n",
+       "      <td>223</td>\n",
+       "      <td>240</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -172,68 +172,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>./images/N53.xml</td>\n",
-       "      <td>217</td>\n",
-       "      <td>428</td>\n",
-       "      <td>147</td>\n",
-       "      <td>188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>./images/N136.xml</td>\n",
-       "      <td>787</td>\n",
-       "      <td>910</td>\n",
-       "      <td>473</td>\n",
-       "      <td>513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>./images/N122.xml</td>\n",
-       "      <td>342</td>\n",
-       "      <td>494</td>\n",
-       "      <td>243</td>\n",
-       "      <td>288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>./images/N240.xml</td>\n",
-       "      <td>164</td>\n",
-       "      <td>285</td>\n",
+       "      <th>428</th>\n",
+       "      <td>./annotations/Cars418.xml</td>\n",
        "      <td>99</td>\n",
-       "      <td>137</td>\n",
+       "      <td>303</td>\n",
+       "      <td>70</td>\n",
+       "      <td>155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>./images/N2.xml</td>\n",
-       "      <td>1804</td>\n",
-       "      <td>2493</td>\n",
-       "      <td>1734</td>\n",
-       "      <td>1882</td>\n",
+       "      <th>429</th>\n",
+       "      <td>./annotations/Cars395.xml</td>\n",
+       "      <td>241</td>\n",
+       "      <td>288</td>\n",
+       "      <td>182</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>./annotations/Cars381.xml</td>\n",
+       "      <td>65</td>\n",
+       "      <td>147</td>\n",
+       "      <td>131</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>./annotations/Cars222.xml</td>\n",
+       "      <td>178</td>\n",
+       "      <td>235</td>\n",
+       "      <td>158</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>./annotations/Cars236.xml</td>\n",
+       "      <td>223</td>\n",
+       "      <td>250</td>\n",
+       "      <td>106</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>225 rows × 5 columns</p>\n",
+       "<p>433 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              filepath  xmin  xmax  ymin  ymax\n",
-       "0    ./images/N107.xml   207   356   174   287\n",
-       "1    ./images/N113.xml    39   108   129   157\n",
-       "2     ./images/N62.xml   289   421   188   232\n",
-       "3     ./images/N89.xml   150   378   217   269\n",
-       "4     ./images/N88.xml   208   370    89   173\n",
-       "..                 ...   ...   ...   ...   ...\n",
-       "220   ./images/N53.xml   217   428   147   188\n",
-       "221  ./images/N136.xml   787   910   473   513\n",
-       "222  ./images/N122.xml   342   494   243   288\n",
-       "223  ./images/N240.xml   164   285    99   137\n",
-       "224    ./images/N2.xml  1804  2493  1734  1882\n",
+       "                      filepath  xmin  xmax  ymin  ymax\n",
+       "0    ./annotations/Cars213.xml   150   233   160   194\n",
+       "1    ./annotations/Cars207.xml   254   372   229   264\n",
+       "2    ./annotations/Cars398.xml    72   196   139   222\n",
+       "3    ./annotations/Cars367.xml   224   382   161   222\n",
+       "4    ./annotations/Cars401.xml   158   238   223   240\n",
+       "..                         ...   ...   ...   ...   ...\n",
+       "428  ./annotations/Cars418.xml    99   303    70   155\n",
+       "429  ./annotations/Cars395.xml   241   288   182   205\n",
+       "430  ./annotations/Cars381.xml    65   147   131   155\n",
+       "431  ./annotations/Cars222.xml   178   235   158   170\n",
+       "432  ./annotations/Cars236.xml   223   250   106   119\n",
        "\n",
-       "[225 rows x 5 columns]"
+       "[433 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
